# extensiondp

./: .gitignore  @configure.ts  @generate.ts  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: general.yaml
extension/: package.json  profile.json
extension/components/: SocialIcons.astro
extension/content/docs/: index.mdx
extension/content/docs/overview/: examples.md  format.md  software.md
extension/content/docs/specification/: metadata.md
extension/content/docs/specification/data/: table1.md  table2.md
extension/public/extension/v0.1.6/: profile.json
extension/public/extension/v0.1.6/schemas/: table1.json  table2.json
extension/schemas/: table1.json  table2.json
sdk-py/: pyproject.toml
sdk-py/extensiondp/: profile.py
sdk-ts/: README.md  index.ts  package.json  profile.ts
sdk-ts/schemas/: index.ts  table1.ts  table2.ts
